--- a/app/views/mypages/_no_reply.erb
+++ b/app/views/mypages/_no_reply.erb
@@ -11,6 +11,6 @@
         <!--  <button class="info_btn">-->
         <!--    <i class="fa fa-pencil" aria-hidden="true"></i> 강의평가 쓰러가기-->
         <!--  </button>-->
-        </div><%#////info_btn_div%>
+        <%#////info_btn_div%>
     </div>
 </div>
